@@ -433,7 +433,7 @@ sub sendAttackStop {
 	# what this function is supposed to do.
 
 	# Don't use this function, use Misc::stopAttack() instead!
-	#sendMove ($r_socket, $chars[$config{'char'}]{'pos_to'}{'x'}, $chars[$config{'char'}]{'pos_to'}{'y'});
+	#sendMove ($chars[$config{'char'}]{'pos_to'}{'x'}, $chars[$config{'char'}]{'pos_to'}{'y'});
 	#debug "Sent stop attack\n", "sendPacket";
 }
 
@@ -1110,7 +1110,6 @@ sub sendMemo {
 }
 
 sub sendMove {
-	my $r_socket = shift;
 	my $x = int scalar shift;
 	my $y = int scalar shift;
 	my $msg;
@@ -1124,7 +1123,7 @@ sub sendMove {
 		$msg = pack("C*", 0x85, 0x00) . getCoordString($x, $y);
 	}
 
-	sendMsgToServer($r_socket, $msg);
+	sendMsgToServer(\$remote_socket, $msg);
 	debug "Sent move to: $x, $y\n", "sendPacket", 2;
 }
 
